# recruting_project

./: LICENSE  README.md
library_project/: CMakeLists.txt  README_HOW_TO_GENERATE_PROJECT.txt
library_project/VALibrary/: CMakeLists.txt
library_project/VALibrary/dep/inc/: Author.h  Book.h  ConsoleManager.h  LibraryManager.h
library_project/VALibrary/dep/src/: Author.cpp  Book.cpp  ConsoleManager.cpp  LibraryManager.cpp
library_project/VALibrary/src/: vaLibrary.cpp
